--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,20 @@ services:
     volumes:
       - pgdata_application:/var/lib/postgresql/data
 
+  sonarqube:
+    image: sonarqube:latest
+    ports:
+      - "9000:9000"
+    environment:
+      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true
+    volumes:
+      - sonarqube_data:/opt/sonarqube/data
+      - sonarqube_logs:/opt/sonarqube/logs
+      - sonarqube_extensions:/opt/sonarqube/extensions
+
 volumes:
   pgdata_users:
   pgdata_application:
+  sonarqube_data:
+  sonarqube_logs:
+  sonarqube_extensions:
