--- a/http-api-gateway/package.json
+++ b/http-api-gateway/package.json
@@ -23,10 +23,15 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.4.6",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "jwks-rsa": "^3.1.0",
     "nats": "^2.28.2",
+    "passport": "^0.7.0",
+    "passport-auth0": "^1.4.4",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
