--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./http-api-gateway/src:/usr/src/app/src
     command: yarn start:dev
     env_file:
-      - .env
+      - ./http-api-gateway/.env
     environment:
       - PORT=3002
 
