--- a/application-microservice/package.json
+++ b/application-microservice/package.json
@@ -28,6 +28,8 @@
     "@nestjs/microservices": "^10.4.6",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.21.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "nats": "^2.28.2",
     "prisma": "^5.21.1",
     "reflect-metadata": "^0.2.0",
