--- a/users-microservice/package.json
+++ b/users-microservice/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "prisma generate && nest start --watch",
+    "start:dev": "prisma generate && prisma migrate dev && nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -21,14 +21,20 @@
     "docker:migrate": "docker-compose exec users_microservice yarn prisma migrate dev",
     "docker:reset": "docker-compose exec users_microservice yarn prisma migrate reset",
     "docker:studio": "docker-compose exec users_microservice yarn prisma studio --port 5555"
-
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "^2.0.6",
     "@nestjs/microservices": "^10.4.6",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.21.1",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "nats": "^2.28.2",
     "prisma": "^5.21.1",
     "reflect-metadata": "^0.2.0",
