--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     depends_on:
       - postgres_db_users
     environment:
-      - DATABASE_URL=postgresql://postgres:password@postgres_db_application:5432/application_db
+      - DATABASE_URL=postgresql://postgres:password@postgres_db_users:5432/users_db
       - JWT_SECRET_KEY=/IrIJwMiClFMzmKvt8y4s1aLu81i9hnEWBbavxczhOHckwvzGwSTYbIRNNoShUX1nvZd5mfIrQNqFNzr/NemOA==
       - JWT_REFRESH_TOKEN=gc5rjE/tBdFdtnoBKbvA2PZcJzUwCtvcdXcYJzhFc7kszZK1rYhZagX1qOcwQvUbuZ7ahcQC9c+uzexNoKKAsg==
 
@@ -36,7 +36,7 @@ services:
     depends_on:
       - postgres_db_application
     environment:
-      - DATABASE_URL=postgresql://postgres:password@postgres_db_users:5432/application_db
+      - DATABASE_URL=postgresql://postgres:password@postgres_db_application:5432/application_db
 
   nats:
     image: nats
